--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -1,5 +1,4 @@
 <header class="fixed-top" style="backdrop-filter: blur(40px)">
-  <!-- [ngStyle]="isNavbarCollapsed ? {background: '#FFFFFF'} : null" -->
   <div class="container mt-3">
     <div class="row navbar d-flex justify-content-between align-items-center">
 
@@ -17,7 +16,7 @@
       <!-- Logo -->
       <div class="col-4 d-flex justify-content-center">
         <a href="">
-          <img ui-sref='main.tiers' [src]="logoJss" />
+          <img ui-sref='' [src]="logoJss" />
         </a>
       </div>
 
@@ -173,7 +172,7 @@
           <div class="row d-flex justify-content-between align-items-center mx-2">
             <div class="col d-flex align-items-center justify-content-start">
               <a href="" class="me-4">
-                <img ui-sref='main.tiers' [src]="logoJss" />
+                <img ui-sref='' [src]="logoJss" />
               </a>
               <div class="col d-flex align-items-center me-2">
                 <a class="btn btn-icon btn-sm btn-outline-secondary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3"
