First working version of footer + reuse of the footer component in the collapsable navbar

--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -117,83 +117,7 @@
           </ul>
         </div>
         <hr>
-
-        <!-- First column for liens utiles & localisation -->
-        <div class="row justify-content-start mx-2">
-          <!-- LIENS UTILES & LOCALISATION (responsive) -->
-          <div class="col-12 col-md-6">
-            <div class="d-flex justify-content-between flex-column flex-md-row">
-              <!-- LIENS UTILES -->
-              <div class="col-auto me-md-4">
-                <div class="lead-text-menu">
-                  LIENS UTILES
-                </div>
-                <p>
-                  <a class="nav-link" style="cursor: pointer;" (click)="openNewOrder($event)">Commande / Devis</a>
-                </p>
-                <p>
-                  <a class="nav-link" style="cursor: pointer;" (click)="openNewOrder($event)">Démo</a>
-                </p>
-                <p>
-                  <a class="nav-link" style="cursor: pointer;" (click)="openNewOrder($event)">Contact</a>
-                </p>
-                <hr>
-                <p>
-                  <a class="nav-link" style="cursor: pointer;" (click)="openNewOrder($event)">Journal Spécial des
-                    Sociétés</a>
-                </p>
-              </div>
-
-              <!-- LOCALISATION -->
-              <div class="col-auto">
-                <div class="lead-text-menu">
-                  LOCALISATION
-                </div>
-                <p class="mb-0">10 Bd Haussmann,</p>
-                <p>75009 Paris</p>
-                <a class="mb-0" href="mailto:contact@jss.fr">contact&#64;jss.fr</a>
-                <p>01.47.03.10.10</p>
-                <hr>
-                <p class="mb-0">lun-ven : 9h00 - 12h30</p>
-                <p>14h00 - 18h00</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Second column for the image (responsive) -->
-          <div class="col-12 col-md-6 d-none d-md-block">
-            <img [src]="map" class="w-100" alt="Map" />
-          </div>
-        </div>
-        <hr>
-
-        <!-- Footer with logo, social media and payments -->
-        <div class="d-none d-sm-block">
-          <div class="row d-flex justify-content-between align-items-center mx-2">
-            <div class="col d-flex align-items-center justify-content-start">
-              <a href="" class="me-4">
-                <img ui-sref='' [src]="logoJss" />
-              </a>
-              <div class="col d-flex align-items-center me-2">
-                <a class="btn btn-icon btn-sm btn-outline-secondary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3"
-                  href="#" aria-label="LinkedIn">
-                  <i class="ai-linkedin"></i>
-                </a>
-                <a class="btn btn-icon btn-sm btn-outline-secondary btn-telegram rounded-circle mx-2 ms-sm-0 me-sm-3"
-                  href="#" aria-label="Facebook">
-                  <i class="ai-facebook"></i>
-                </a>
-                <a class="btn btn-icon btn-sm btn-outline-secondary btn-instagram rounded-circle mx-2 ms-sm-0 me-sm-3"
-                  href="#" aria-label="Instagram">
-                  <i class="ai-instagram"></i>
-                </a>
-              </div>
-            </div>
-            <div class="col-2">
-              <img [src]="paymentMethods" alt="Payment Methods" />
-            </div>
-          </div>
-        </div>
+        <main-footer [isInNavbar]="true" class="mx-0"></main-footer>
       </nav>
     </div>
 
