--- a/client-myjss/src/app/app.component.html
+++ b/client-myjss/src/app/app.component.html
@@ -1,6 +1,9 @@
 <main class="page-wrapper background-blue" [ngClass]="{'bg-secondary' : isDisplayGreyBackground()}">
   <top-bar *ngIf="isDisplayHeader()"></top-bar>
   <router-outlet></router-outlet>
-  <!-- <main-footer *ngIf="isDisplayFooter()"></main-footer> -->
-  <!-- <toast style="display: block; position: fixed; bottom: 20px; right: 20px;" class="z-3"></toast> -->
+  <div class="container">
+    <hr>
+    <main-footer *ngIf="isDisplayFooter()"></main-footer>
+  </div>
+  <toast style="display: block; position: fixed; bottom: 20px; right: 20px;" class="z-3"></toast>
 </main>
