changed background of navbar to make it visible

--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
@@ -15,3 +15,8 @@ hr {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
+
+.jss-navbar {
+    backdrop-filter: blur(40px);
+    background-color: #1c2d41b6;
+}
