--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<header class="fixed-top" style="backdrop-filter: blur(40px)">
+<header class="fixed-top jss-navbar">
   <div class="container mt-3">
     <div class="row navbar d-flex justify-content-between align-items-center">
 
