correcting social media icon color + small  bug on responsivness

--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <!-- First column for liens utiles & localisation -->
     <div class="row justify-content-start mx-2">
       <!-- SERVICES, LA SOCIÉTÉ, OUTILS, LIENS UTILES & LOCALISATION (responsive) -->
-      <div *ngIf="!isInNavbar" class="col-12 col-md-6 ms-0 ps-0">
+      <div *ngIf="!isInNavbar" class="col-12 col-xl-6 ms-0 ps-0">
         <div class="d-flex justify-content-between flex-column flex-md-row">
 
           <!-- SERVICES -->
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 ms-0 ps-0">
+      <div class="col-12 col-xl-6 ms-0 ps-0">
         <div class="d-flex justify-content-between flex-column flex-md-row">
           <!-- LIENS UTILES -->
           <div class="col-auto me-md-4">
@@ -93,16 +93,16 @@
             <img ui-sref='main.tiers' [src]="logoJss" />
           </a>
           <div class="col d-flex align-items-center me-2">
-            <a class="btn btn-icon btn-sm btn-outline-secondary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3"
-              href="#" aria-label="LinkedIn">
+            <a class="btn btn-icon btn-sm btn-outline-primary btn-linkedin rounded-circle mx-2 ms-sm-0 me-sm-3" href="#"
+              aria-label="LinkedIn">
               <i class="ai-linkedin"></i>
             </a>
-            <a class="btn btn-icon btn-sm btn-outline-secondary btn-telegram rounded-circle mx-2 ms-sm-0 me-sm-3"
-              href="#" aria-label="Facebook">
+            <a class="btn btn-icon btn-sm btn-outline-primary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3" href="#"
+              aria-label="Facebook">
               <i class="ai-facebook"></i>
             </a>
-            <a class="btn btn-icon btn-sm btn-outline-secondary btn-instagram rounded-circle mx-2 ms-sm-0 me-sm-3"
-              href="#" aria-label="Instagram">
+            <a class="btn btn-icon btn-sm btn-outline-primary btn-instagram rounded-circle mx-2 ms-sm-0 me-sm-3" href="#"
+              aria-label="Instagram">
               <i class="ai-instagram"></i>
             </a>
           </div>
