save devs before pulling develop, add new webpage Services>Annonces Légales

--- a/client-myjss/src/app/modules/offers/old/offers/offers.component.html
+++ b/client-myjss/src/app/modules/offers/old/offers/offers.component.html
@@ -8,7 +8,7 @@
       <li class="breadcrumb-item active" aria-current="page">Nos offres</li>
     </ol>
   </nav>
-
+  <button (onclick)="openServices($event)"></button>
   <!-- Page title -->
   <h1 class="text-center">Nos offres</h1>
   <p class="text-center pb-4 mb-2 mb-lg-3">Nous fournissons un grand pannel de services de formalités</p>
