test to change color text and bg card

--- a/client-myjss/src/app/modules/miscellaneous/components/description-my-account/description-my-account.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/description-my-account/description-my-account.component.html
@@ -9,12 +9,13 @@
     </div>
     <div class="col-md-6 col-xl-5 offset-xl-1">
       <div class="pt-4 pb-sm-4 ps-md-4 ps-xl-0">
-        <h2 class="h1 pb-2 pb-sm-3 pb-xl-4">Parcourir l'espace <br>"Mon compte"</h2>
+        <h2 class="h1 text-white pb-2 pb-sm-3 pb-xl-4">Parcourir l'espace <br>"Mon compte"</h2>
         <div class="d-flex pb-3 mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">01</div>
           <div class="ps-3">
-            <h3 class="h5">Gestion de votre commande</h3>
-            <p class="mb-0">Suivi de votre dossier en ligne via MYJSS et consultation des pièces obligatoires, avec une
+            <h3 class="h5 text-white">Gestion de votre commande</h3>
+            <p class="mb-0 text-body-secondary">Suivi de votre dossier en ligne via MYJSS et consultation des pièces
+              obligatoires, avec une
               mise à jour en temps réel de l'avancement.</p>
           </div>
         </div>
