--- a/client-myjss/src/app/modules/miscellaneous/components/explaination-video/explaination-video.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/explaination-video/explaination-video.component.html
@@ -25,12 +25,14 @@
       </div>
     </div>
     <div class="col-sm-6 col-lg-4 order-lg-1">
-      <a class="card bg-secondary border-0 h-100 text-decoration-none" style="cursor: pointer;" (click)="jumpTo(5)">
-        <div class="card border-0 bg-secondary h-100 py-lg-2 py-xl-4">
-          <div class="card-body">
-            <p>Etape 01</p>
-            <h3>Sélectionnez votre formulaire</h3>
-            <p class="mb-0">Accédez à une bibliothèque complète de formulaires adaptés à vos besoins juridiques et
+      <a class="card background-card border-0 h-100 text-decoration-none " style="cursor: pointer; "
+        (click)="jumpTo(5)">
+        <div class="card background-card border-0 h-100 py-lg-2 py-xl-4">
+          <div class="card-body background-card">
+            <p class="text-grey">Etape 01</p>
+            <h3 class="text-white">Sélectionnez votre formulaire </h3>
+            <p class="mb-0 text-grey">Accédez à une bibliothèque complète de formulaires adaptés à vos besoins
+              juridiques et
               professionnels.</p>
           </div>
         </div>
