correction, on input var

--- a/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
@@ -3,4 +3,4 @@
   <button type="button" class="btn btn-outline-secondary ">{{quotationActionLabel}} <i
       class="ai-arrow-right"></i></button>
 </div>
-<a href="#" (click)="openRoute($event)" class="d-block mb-2">{{labelLink}}</a>
+<a href="#" (click)="openRoute($event)" class="d-block mb-2" style="z-index: 1;">{{linkLabel}}</a>
