Using bootstrap classes instead of native CSS

--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <div class="overlay"></div>
 
     <!-- The HTML5 video element that will create the background video on the header -->
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <video class="mt-5 mt-lg-0" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
       <source [src]="videoParis" type="video/webm">
     </video>
 
