--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -102,21 +102,21 @@
               </ul>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Commande / Devis</a>
+              <a class="nav-link " style="cursor: pointer;" (click)="$event">Commande / Devis</a>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Démo</a>
+              <a class="nav-link " style="cursor: pointer;" (click)="$event">Démo</a>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Contact</a>
+              <a class="nav-link " style="cursor: pointer;" (click)="$event">Contact</a>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Journal Spécial des
+              <a class="nav-link " style="cursor: pointer;" (click)="$event">Journal Spécial des
                 Sociétés</a>
             </li>
           </ul>
         </div>
-        <hr>
+        <hr class="my-3">
         <main-footer [isInNavbar]="true" class="mx-0"></main-footer>
       </nav>
     </div>
@@ -149,16 +149,16 @@
             </ul>
           </li>
           <li class="nav-item col col-md-auto">
-            <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Commande / Devis</a>
+            <a class="nav-link " style="cursor: pointer;" (click)="$event">Commande / Devis</a>
           </li>
           <li class="nav-item col col-md-auto">
-            <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Démo</a>
+            <a class="nav-link " style="cursor: pointer;" (click)="$event">Démo</a>
           </li>
           <li class="nav-item col col-md-auto">
-            <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Contact</a>
+            <a class="nav-link " style="cursor: pointer;" (click)="$event">Contact</a>
           </li>
           <li class="nav-item col col-md-auto">
-            <a class="nav-link " style="cursor: pointer;" (click)="openNewOrder($event)">Journal Spécial des
+            <a class="nav-link " style="cursor: pointer;" (click)="$event">Journal Spécial des
               Sociétés</a>
           </li>
         </ul>
