--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
@@ -11,12 +11,11 @@
     margin-bottom: 20px;
 }
 
-hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
 .jss-navbar {
     backdrop-filter: blur(40px);
     background-color: #1c2d41b6;
 }
+
+/* .dropdown-menu {
+    backdrop-filter: blur(40px);
+} */
