--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -13,7 +13,7 @@
         <div class="col-lg-6 col-auto h-100 text-left">
           <div class="w-100 text-white">
             <h1 class="display-3 text-white">Votre esprit libre, notre savoir-faire</h1>
-            <p class="lead mb-0">Avec MYJSS, accédez à une information juridique fiable et actualisée pour prendre des
+            <p class="lead mb-0">Avec MyJSS, accédez à une information juridique fiable et actualisée pour prendre des
               décisions éclairées.</p>
           </div>
         </div>
